# PCE26

./: .gitignore  README.md  pyproject.toml
app/: Main.py
app/.ipynb_checkpoints/: app-checkpoint.py
app/pages/: 01_Residues.py  02_Design_Assessment.py
data/poi/: base-choices.csv  best-bases.csv  index.yaml
data/scaffolds/: index.yaml  lysine-candidates.csv  lysine-choices.csv
experiments/: README_experiments.md
experiments/03.06.boltz.1f15.7m8w/msa/: input_3.csv
experiments/03.06.boltz.1f15.7m8w/processed/: manifest.json
experiments/03.06.boltz.4oq8.crth/msa/: input_1.csv
experiments/03.06.boltz.4oq8.crth/processed/: manifest.json
experiments/03.06.boltz.7mry.crth/msa/: input_2.csv
experiments/03.06.boltz.7mry.crth/processed/: manifest.json
experiments/03.06.boltz.8r0f.crth/msa/: input_0.csv
experiments/03.06.boltz.8r0f.crth/processed/: manifest.json
experiments/10.04boltz_results_input_5ow6_2bsB/msa/: input_0.csv
experiments/foldx/: Unrecognized_molecules.txt
experiments/mpnn.output/: 03.06.mpnn.7m8w.copy.fa  03.06.mpnn.7m8w.fa  03.06.mpnn.crth.fa  10.06.mpnn.3s7i.B.fa  10.06.mpnn.ipuo.B.fa  17.06.mpnn.1PIO.fa  17.06.mpnn.3s7i.fa  21.05.mpnn.2b5sb.fa  22.05.2b5s.mpnn.fa  22.06.Redesigns.fa  22.06.mpnn.1puo.fa  22.06.mpnn.3s71.fa  22.06.mpnn.crth.fa
notebooks/: 2026-04-23.axial-organization.ipynb  2026-04-27.axial_review.ipynb  2026-04-28-boltzinput.ipynb
results/chemical-modification/: boltz_input.yaml  boltz_input_.yaml  boltz_input_2.yaml  boltz_input_3.yaml  boltz_input_4.yaml  boltz_input_5_monster_7MRY.yaml  exposed_residues.yaml
(+473 files in other folders)
